--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
         <ul class="programs__list d-flex">
           <li class="programs__item d-flex">
             <span class="programs__number">98%</span>
-            <h5>Photoshop</h5>
+            <a href="#" class="programs__link">Photoshop</a>
           </li>
           <li class="programs__item d-flex">
             <span class="programs__number">98%</span>
-            <h5>html5</h5>
+            <a href="#" class="programs__link">html5</a>
           </li>
           <li class="programs__item d-flex">
             <span class="programs__number">98%</span>
-            <h5>css3</h5>
+            <a href="#" class="programs__link">css3</a>
           </li>
           <li class="programs__item d-flex">
             <span class="programs__number">98%</span>
-            <h5>Лень</h5>
+            <a href="#" class="programs__link">Лень</a>
           </li>
         </ul>
       </div>
@@ -142,14 +142,34 @@
             <img
               src="img/Rectangle 4.png"
               alt="nature"
-              class="portfolio__img"
+              class="hover-image-scale"
             />
+            <div class="portfolio__overlay">
+              <p>Название Работы</p>
+              <span class="portfolio__watch">Смотреть</span>
+            </div>
           </div>
           <div class="portfolio__work">
-            <img src="img/Rectangle 5.png" alt="deer" class="portfolio__img" />
+            <img
+              src="img/Rectangle 6.png"
+              alt="deer"
+              class="hover-image-scale"
+            />
+            <div class="portfolio__overlay">
+              <p>Название Работы</p>
+              <span class="portfolio__watch">Смотреть</span>
+            </div>
           </div>
           <div class="portfolio__work">
-            <img src="img/Rectangle 6.png" alt="house" class="portfolio__img" />
+            <img
+              src="img/Rectangle 5.png"
+              alt="house"
+              class="hover-image-scale"
+            />
+            <div class="portfolio__overlay">
+              <p>Название Работы</p>
+              <span class="portfolio__watch">Смотреть</span>
+            </div>
           </div>
         </div>
       </div>
